macros/entity_macros/tests/ui/derive/ent/struct/field-marked-mutable-and-computed.stderr
error: Cannot have field be mutable and computed
  --> $DIR/field-marked-mutable-and-computed.rs:18:5
   |
18 |     computed_field: Option<u32>,
   |     ^^^^^^^^^^^^^^
